--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,5 +22,5 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t ghcr.io/haosgames/restic-pg-dump-docker:latest
+        docker build -t ghcr.io/haosgames/restic-pg-dump-docker:latest .
         docker push ghcr.io/haosgames/restic-pg-dump-docker:latest
