--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,6 +29,7 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
     - name: Chart | Push
       uses: appany/helm-oci-chart-releaser@v0.5.0
       with:
