--- a/test/helm-values.yaml
+++ b/test/helm-values.yaml
@@ -3,4 +3,4 @@ backups:
     namespace: default
     dbAppConfig: cluster-example-app
     resticSecretName: restic-secret
-    schedule: "0 0 * * *"
+    schedule: "*/5 * * * *"
