--- a/charts/backup/templates/backup-cronjob.yaml
+++ b/charts/backup/templates/backup-cronjob.yaml
@@ -21,6 +21,8 @@ spec:
             - secretRef:
                 name: {{ $value.resticSecretName }}
             env:
+            - name: DB_RESTIC_NAME
+              value: {{ $value.namespace}}-{{ $value.name }}
             - name: PGHOST
               valueFrom:
                 secretKeyRef:
