feat: add restore chart

--- a/test/helm-values-restore.yaml
+++ b/test/helm-values-restore.yaml
@@ -1,5 +1,5 @@
 restores:
   - name: example
     namespace: default
-    dbAppConfig: cluster-example-app
+    dbAppConfig: cluster-restored-app
     resticSecretName: restic-secret
