--- a/charts/restore/templates/restore-job.yaml
+++ b/charts/restore/templates/restore-job.yaml
@@ -8,10 +8,16 @@ metadata:
 spec:
   template:
     spec:
+      {{ if .Values.extraVolumes }}
+      volumes: {{ .Values.extraVolumes }}
+      {{ end }}
       containers:
       - name: restic-backup
         image: ghcr.io/haosgames/restic-pg-dump-docker:latest
         imagePullPolicy: IfNotPresent
+        {{ if .Values.extraVolumeMounts }}
+        volumeMounts: {{ .Values.extraVolumeMounts }}
+        {{ end }}
         command:
         - restore.sh
         envFrom:
