--- a/charts/restore/templates/restore-job.yaml
+++ b/charts/restore/templates/restore-job.yaml
@@ -8,16 +8,18 @@ metadata:
 spec:
   template:
     spec:
-      {{ if .Values.extraVolumes }}
-      volumes: {{ .Values.extraVolumes }}
-      {{ end }}
+      {{- with $.Values.extraVolumes }}
+      volumes:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
       - name: restic-backup
         image: ghcr.io/haosgames/restic-pg-dump-docker:latest
         imagePullPolicy: IfNotPresent
-        {{ if .Values.extraVolumeMounts }}
-        volumeMounts: {{ .Values.extraVolumeMounts }}
-        {{ end }}
+        {{- with $.Values.extraVolumeMounts }}
+        volumeMounts:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
         command:
         - restore.sh
         envFrom:
