fix: volume claim

--- a/test/helm-values-backup.yaml
+++ b/test/helm-values-backup.yaml
@@ -7,7 +7,7 @@ backups:
 
 extraVolumes:
   - name: restic-test-repo
-    persistantVolumeClaim:
+    persistentVolumeClaim:
       claimName: restic-test-repo
 
 extraVolumeMounts:
