--- a/test/helm-values-restore.yaml
+++ b/test/helm-values-restore.yaml
@@ -7,7 +7,7 @@ restores:
 
 extraVolumes:
   - name: restic-test-repo
-    persistantVolumeClaim:
+    persistentVolumeClaim:
       claimName: restic-test-repo
 
 extraVolumeMounts:
