fix: use value for imagePullPolicy

--- a/charts/backup/templates/backup-cronjob.yaml
+++ b/charts/backup/templates/backup-cronjob.yaml
@@ -18,7 +18,7 @@ spec:
           containers:
           - name: restic-backup
             image: ghcr.io/haosgames/restic-pg-dump-docker:latest
-            imagePullPolicy: IfNotPresent
+            imagePullPolicy: {{ $.Values.imagePullPolicy }}
             {{- with $.Values.extraVolumeMounts }}
             volumeMounts:
               {{- toYaml . | nindent 14 }}
