--- a/charts/backup/values.yaml
+++ b/charts/backup/values.yaml
@@ -4,3 +4,5 @@
 #     dbAppConfig: cluster-example-app
 #     resticSecretName: restic-secret
 #     schedule: "0 0 * * *"
+
+imagePullPolicy: IfNotPresent
