--- a/charts/restore/values.yaml
+++ b/charts/restore/values.yaml
@@ -3,5 +3,6 @@
 #     namespace: default
 #     dbAppConfig: cluster-example-app
 #     resticSecretName: restic-secret
+#     doCleanup: true # cleanup db before restore
 
 imagePullPolicy: IfNotPresent
