feat: allow to specify spcific restore snapshot id

--- a/charts/restore/templates/restore-job.yaml
+++ b/charts/restore/templates/restore-job.yaml
@@ -30,6 +30,8 @@ spec:
           value: {{ $value.namespace }}-{{ $value.name }}
         - name: DO_CLEANUP
           value: {{ $value.doCleanup | quote | default "false" }}
+        - name: RESTIC_SNAPSHOT_ID
+          value: {{ $value.snapshotID | default "latest" }}
         - name: PGHOST
           valueFrom:
             secretKeyRef:
