fix: add restore  job iteration number to name

--- a/charts/restore/templates/restore-job.yaml
+++ b/charts/restore/templates/restore-job.yaml
@@ -3,7 +3,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: restic-restore-{{ $value.name }}
+  name: restic-restore-{{ $value.name }}-{{ $value.jobIteration | default 1 }}
   namespace: {{ $value.namespace }}
 spec:
   template:
