--- a/charts/restore/values.yaml
+++ b/charts/restore/values.yaml
@@ -5,5 +5,6 @@
 #     resticSecretName: restic-secret
 #     doCleanup: true # cleanup db before restore
 #     snapshotID: latest
+#     jobIteration: 1
 
 imagePullPolicy: IfNotPresent
