--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,12 +3,14 @@ name: CI/CD
 on:
   push:
     branches: [ master ]
+    tags:
+    - v*
   pull_request:
     branches: [ master ]
 
 jobs:
   build-and-push:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref_type == 'tag')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -22,11 +24,11 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t ghcr.io/haosgames/restic-pg-dump-docker:latest .
-        docker push ghcr.io/haosgames/restic-pg-dump-docker:latest
+        docker build -t ghcr.io/haosgames/restic-pg-dump-docker:${{ github.ref_name }} .
+        docker push ghcr.io/haosgames/restic-pg-dump-docker:${{ github.ref_name }}
 
   push-helmchart:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref_type == 'tag')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -35,7 +37,7 @@ jobs:
       with:
         name: pg-dump-restic-backup-chart
         repository: haosgames/restic-pg-dump-docker
-        tag: 0.1.0
+        tag: ${{ github.ref_name }}
         path: charts/backup # Default charts/{name}
         registry: ghcr.io
         registry_username: hasgames
@@ -45,7 +47,7 @@ jobs:
       with:
         name: pg-restore-restic-backup-chart
         repository: haosgames/restic-pg-dump-docker
-        tag: 0.1.0
+        tag: ${{ github.ref_name }}
         path: charts/restore # Default charts/{name}
         registry: ghcr.io
         registry_username: hasgames
