--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,15 +2,15 @@ name: CI/CD
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - '**'
     tags:
-    - v*
+      - 'v[0-9]+.[0-9]+.[0-9]+*'
   pull_request:
     branches: [ master ]
 
 jobs:
   build-and-push:
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref_type == 'tag')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -22,33 +22,52 @@ jobs:
         username: haosgames
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Set Docker image tag
+      id: set-tag
+      run: |
+        if [[ "${{ github.ref_type }}" == "tag" ]]; then
+          echo "IMAGE_TAG=${{ github.ref_name }}" >> $GITHUB_ENV
+        else
+          echo "IMAGE_TAG=${{ github.sha }}" >> $GITHUB_ENV
+        fi
+
     - name: Build and push Docker image
       run: |
-        docker build -t ghcr.io/haosgames/restic-pg-dump-docker:${{ github.ref_name }} .
-        docker push ghcr.io/haosgames/restic-pg-dump-docker:${{ github.ref_name }}
+        # Build with both specific tag and latest tag
+        docker build -t ghcr.io/haosgames/restic-pg-dump-docker:${{ env.IMAGE_TAG }} .
+        docker push ghcr.io/haosgames/restic-pg-dump-docker:${{ env.IMAGE_TAG }}
+        
+        # If this is the master branch, also tag as latest
+        if [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
+          docker tag ghcr.io/haosgames/restic-pg-dump-docker:${{ env.IMAGE_TAG }} ghcr.io/haosgames/restic-pg-dump-docker:latest
+          docker push ghcr.io/haosgames/restic-pg-dump-docker:latest
+        fi
 
   push-helmchart:
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref_type == 'tag')
+    # Only run for semantic version tags
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '.')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    
     - name: Backup Chart | Push
       uses: appany/helm-oci-chart-releaser@v0.5.0
       with:
         name: pg-dump-restic-backup-chart
         repository: haosgames/restic-pg-dump-docker
         tag: ${{ github.ref_name }}
-        path: charts/backup # Default charts/{name}
+        path: charts/backup
         registry: ghcr.io
         registry_username: hasgames
         registry_password: ${{ secrets.GITHUB_TOKEN }}
+    
     - name: Restore Chart | Push
       uses: appany/helm-oci-chart-releaser@v0.5.0
       with:
         name: pg-restore-restic-backup-chart
         repository: haosgames/restic-pg-dump-docker
         tag: ${{ github.ref_name }}
-        path: charts/restore # Default charts/{name}
+        path: charts/restore
         registry: ghcr.io
         registry_username: hasgames
         registry_password: ${{ secrets.GITHUB_TOKEN }}
