fix(helm): values for image tag and repo

--- a/charts/backup/templates/backup-cronjob.yaml
+++ b/charts/backup/templates/backup-cronjob.yaml
@@ -17,8 +17,8 @@ spec:
           {{- end }}
           containers:
           - name: restic-backup
-            image: ghcr.io/haosgames/restic-pg-dump-docker:latest
-            imagePullPolicy: {{ $.Values.imagePullPolicy }}
+            image: {{ $.Values.image.repo }}:{{ $.Values.image.tag }}
+            imagePullPolicy: {{ $.Values.image.PullPolicy }}
             {{- with $.Values.extraVolumeMounts }}
             volumeMounts:
               {{- toYaml . | nindent 14 }}
