--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,9 +38,9 @@ jobs:
         docker push ghcr.io/haosgames/restic-pg-dump-docker:${{ env.IMAGE_TAG }}
         
         # If this is the master branch, also tag as latest
-        if [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-          docker tag ghcr.io/haosgames/restic-pg-dump-docker:${{ env.IMAGE_TAG }} ghcr.io/haosgames/restic-pg-dump-docker:latest
-          docker push ghcr.io/haosgames/restic-pg-dump-docker:latest
+        if [[ "${{ github.ref_type }}" == "branch" ]]; then
+          docker tag ghcr.io/haosgames/restic-pg-dump-docker:${{ env.IMAGE_TAG }} ghcr.io/haosgames/restic-pg-dump-docker:${{ github.ref_name }}
+          docker push ghcr.io/haosgames/restic-pg-dump-docker:${{ github.ref_name }}
         fi
 
   push-helmchart:
